# InterroGame

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT-DOCKER.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  QUICKSTART.md  README.md  SETUP-DOCKER.md  SPEC.md  cleanup-docker.sh  deploy-docker.sh  deploy.sh  docker-compose.yml  logs-docker.sh  nginx.conf  package-lock.json  package.json  setup.sh  start-backend.sh  stop-docker.sh
.github/: copilot-instructions.md
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/config/: game-settings.json  scenarios.json  suspects.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/pages/: AdminPage.tsx  AdminSettingsPage.tsx  GamePage.tsx  HomePage.tsx  ProfilePage.tsx  ResultPage.tsx  SurveyPage.tsx
frontend/src/utils/: adminConfig.ts  apiClient.ts  configLoader.ts  gameStorage.ts
